Enable file uploads via PATCH requests
- Add change request helper for generic helpers
- Add model methods to planning application to filter and display different document changes
- Make PATCH specs and system specs pass for all types of change requests
- Ensure new document foreign key is optional
- Ensure helper methods are flexible against the class name
- Had a quick design review with Ali and made small adjustments to reflect comments
- Separate change requests common class methods into change request module
- Ensure index for requests is sorted with latest at the top
- Add better instruction to swagger document for document CR
- Expose image URL on json show page and new document uploaded details
