# app/controllers/api/v1/change_requests_controller.rb
@@ -6,7 +6,7 @@ class Api::V1::ChangeRequestsController < Api::V1::ApplicationController
 private
 
   def check_token_and_set_application
-    @planning_application = current_local_authority.planning_applications.where(id: params[:planning_application_id]).first
+    @planning_application = current_local_authority.planning_applications.find_by(id: params[:planning_application_id])
     if params[:change_access_id] != @planning_application.change_access_id
       render json: {}, status: 401
     else
