# db/migrate/20210522255806_create_document_change_requests.rb
@@ -3,10 +3,9 @@ class CreateDocumentChangeRequests < ActiveRecord::Migration[6.1]
     create_table :document_change_requests do |t|
       t.references :planning_application, null: false, foreign_key: true
       t.references :user, null: false, foreign_key: true
-      t.references :document, null: false, foreign_key: true
+      t.references :old_document, null: false, foreign_key: { to_table: :documents }
+      t.references :new_document, foreign_key: { to_table: :documents }
       t.string :state, default: "open", null: false
-      t.boolean :approved
-      t.string :rejection_reason
 
       t.timestamps
     end
